k8chart/templates/apps-akka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c -o k8chart
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: apps-akka
  name: apps-akka
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: apps-akka
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c -o k8chart
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/bbb-net1: "true"
        io.kompose.service: apps-akka
    spec:
      containers:
        - env:
            - name: DOMAIN
            - name: SHARED_SECRET
          image: apps-akka
          name: apps-akka
          resources: {}
          volumeMounts:
            - mountPath: /var/freeswitch/meetings
              name: vol-freeswitch
      restartPolicy: Always
      volumes:
        - name: vol-freeswitch
          persistentVolumeClaim:
            claimName: vol-freeswitch
status: {}
