k8chart/templates/etherpad-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c -o k8chart
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: etherpad
  name: etherpad
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: etherpad
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c -o k8chart
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/bbb-net1: "true"
        io.kompose.service: etherpad
    spec:
      containers:
        - env:
            - name: ETHERPAD_API_KEY
          image: etherpad
          name: etherpad
          resources: {}
      restartPolicy: Always
status: {}
