k8chart/templates/freeswitch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c -o k8chart
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: freeswitch
  name: freeswitch
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: freeswitch
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c -o k8chart
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: freeswitch
    spec:
      containers:
        - env:
            - name: DISABLE_SOUND_ALONE
              value: "false"
            - name: DISABLE_SOUND_MUTED
              value: "false"
            - name: DOMAIN
            - name: ESL_PASSWORD
              value: ClueCon
            - name: EXTERNAL_IPv4
            - name: EXTERNAL_IPv6
              value: ::1
            - name: SIP_IP_ALLOWLIST
            - name: SOUNDS_LANGUAGE
              value: en-us-callie
          image: freeswitch
          name: freeswitch
          resources: {}
          securityContext:
            capabilities:
              add:
                - IPC_LOCK
                - NET_ADMIN
                - NET_RAW
                - NET_BROADCAST
                - SYS_NICE
                - SYS_RESOURCE
          volumeMounts:
            - mountPath: /etc/freeswitch/sip_profiles/external
              name: freeswitch-claim0
            - mountPath: /etc/freeswitch/dialplan/public_docker
              name: freeswitch-claim1
            - mountPath: /var/freeswitch/meetings
              name: vol-freeswitch
      restartPolicy: Always
      volumes:
        - name: freeswitch-claim0
          persistentVolumeClaim:
            claimName: freeswitch-claim0
        - name: freeswitch-claim1
          persistentVolumeClaim:
            claimName: freeswitch-claim1
        - name: vol-freeswitch
          persistentVolumeClaim:
            claimName: vol-freeswitch
status: {}
