k8chart/templates/fsesl-akka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c -o k8chart
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: fsesl-akka
  name: fsesl-akka
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: fsesl-akka
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c -o k8chart
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/bbb-net1: "true"
        io.kompose.service: fsesl-akka
    spec:
      containers:
        - env:
            - name: FSESL_PASSWORD
              value: ClueCon
          image: fsesl-akka
          name: fsesl-akka
          resources: {}
      restartPolicy: Always
status: {}
