k8chart/templates/html5-frontend-1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c -o k8chart
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: html5-frontend-1
  name: html5-frontend-1
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: html5-frontend-1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c -o k8chart
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/bbb-net1: "true"
        io.kompose.service: html5-frontend-1
    spec:
      containers:
        - env:
            - name: AUTO_SHARE_WEBCAM
              value: "false"
            - name: BBB_HTML5_ROLE
              value: frontend
            - name: BREAKOUTROOM_LIMIT
              value: "8"
            - name: CHAT_ENABLED
              value: "true"
            - name: CHAT_START_CLOSED
              value: "false"
            - name: CLIENT_TITLE
            - name: DEV_MODE
            - name: DISABLE_ECHO_TEST
              value: "false"
            - name: DISABLE_VIDEO_PREVIEW
              value: "false"
            - name: DOMAIN
            - name: ETHERPAD_API_KEY
            - name: INSTANCE_ID
              value: "1"
            - name: LISTEN_ONLY_MODE
              value: "true"
            - name: PORT
              value: "4100"
          image: bbb-html5
          name: html5-frontend-1
          resources: {}
          volumeMounts:
            - mountPath: /html5-static
              name: html5-static
      restartPolicy: Always
      volumes:
        - name: html5-static
          persistentVolumeClaim:
            claimName: html5-static
status: {}
