k8chart/templates/jodconverter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c -o k8chart
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: jodconverter
  name: jodconverter
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: jodconverter
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c -o k8chart
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/bbb-net1: "true"
        io.kompose.service: jodconverter
    spec:
      containers:
        - image: jodconverter
          name: jodconverter
          resources:
            limits:
              memory: "536870912"
          volumeMounts:
            - mountPath: /tmp
              name: jodconverter-tmpfs0
      restartPolicy: Always
      volumes:
        - emptyDir:
            medium: Memory
          name: jodconverter-tmpfs0
status: {}
