k8chart/templates/kurento-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c -o k8chart
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: kurento
  name: kurento
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kurento
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c -o k8chart
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: kurento
    spec:
      containers:
        - env:
            - name: GST_DEBUG
              value: 3,Kurento*:4,kms*:4,KurentoWebSocketTransport:5
            - name: KMS_MAX_PORT
              value: "32768"
            - name: KMS_MIN_PORT
              value: "24577"
            - name: KMS_NETWORK_INTERFACES
            - name: KMS_STUN_IP
            - name: KMS_STUN_PORT
          image: kurento/kurento-media-server:6.16
          name: kurento
          resources: {}
          volumeMounts:
            - mountPath: /var/kurento
              name: vol-kurento
      restartPolicy: Always
      volumes:
        - name: vol-kurento
          persistentVolumeClaim:
            claimName: vol-kurento
status: {}
