k8chart/templates/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c -o k8chart
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c -o k8chart
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: nginx
    spec:
      containers:
        - image: nginx
          name: nginx
          resources: {}
          volumeMounts:
            - mountPath: /var/bigbluebutton
              name: bigbluebutton
            - mountPath: /html5-static
              name: html5-static
              readOnly: true
            - mountPath: /www/default.pdf
              name: nginx-claim2
      restartPolicy: Always
      volumes:
        - name: bigbluebutton
          persistentVolumeClaim:
            claimName: bigbluebutton
        - name: html5-static
          persistentVolumeClaim:
            claimName: html5-static
            readOnly: true
        - name: nginx-claim2
          persistentVolumeClaim:
            claimName: nginx-claim2
status: {}
