k8chart/templates/periodic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c -o k8chart
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: periodic
  name: periodic
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: periodic
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c -o k8chart
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/bbb-net1: "true"
        io.kompose.service: periodic
    spec:
      containers:
        - env:
            - name: ENABLE_RECORDING
            - name: RECORDING_MAX_AGE_DAYS
            - name: REMOVE_OLD_RECORDING
          image: periodic
          name: periodic
          resources: {}
          volumeMounts:
            - mountPath: /var/run/docker.sock
              name: periodic-claim0
            - mountPath: /var/bigbluebutton
              name: bigbluebutton
            - mountPath: /var/log/bigbluebutton
              name: periodic-tmpfs0
      restartPolicy: Always
      volumes:
        - name: periodic-claim0
          persistentVolumeClaim:
            claimName: periodic-claim0
        - name: bigbluebutton
          persistentVolumeClaim:
            claimName: bigbluebutton
        - emptyDir:
            medium: Memory
          name: periodic-tmpfs0
status: {}
