k8chart/templates/recordings-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c -o k8chart
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: recordings
  name: recordings
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: recordings
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c -o k8chart
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/bbb-net1: "true"
        io.kompose.service: recordings
    spec:
      containers:
        - env:
            - name: DOMAIN
          image: recordings
          name: recordings
          resources: {}
          volumeMounts:
            - mountPath: /var/bigbluebutton
              name: bigbluebutton
            - mountPath: /var/freeswitch/meetings
              name: vol-freeswitch
            - mountPath: /var/kurento
              name: vol-kurento
            - mountPath: /var/log/bigbluebutton
              name: recordings-tmpfs0
            - mountPath: /tmp
              name: recordings-tmpfs1
      restartPolicy: Always
      volumes:
        - name: bigbluebutton
          persistentVolumeClaim:
            claimName: bigbluebutton
        - name: vol-freeswitch
          persistentVolumeClaim:
            claimName: vol-freeswitch
        - name: vol-kurento
          persistentVolumeClaim:
            claimName: vol-kurento
        - emptyDir:
            medium: Memory
          name: recordings-tmpfs0
        - emptyDir:
            medium: Memory
          name: recordings-tmpfs1
status: {}
