k8chart/templates/webrtc-sfu-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c -o k8chart
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: webrtc-sfu
  name: webrtc-sfu
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: webrtc-sfu
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c -o k8chart
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/bbb-net1: "true"
        io.kompose.service: webrtc-sfu
    spec:
      containers:
        - env:
            - name: CLIENT_HOST
              value: 0.0.0.0
            - name: ESL_IP
              value: host.docker.internal
            - name: ESL_PASSWORD
              value: ClueCon
            - name: FREESWITCH_IP
              value: host.docker.internal
            - name: FREESWITCH_SIP_IP
            - name: KURENTO_NAME
              value: kurento
            - name: LOG_LEVEL
              value: info
            - name: NODE_CONFIG
              value: '{"kurento":[{"ip":"","url":"ws://kurento:8888/kurento"}]}'
            - name: REDIS_HOST
              value: redis
          image: webrtc-sfu
          name: webrtc-sfu
          ports:
            - containerPort: 3008
          resources: {}
      restartPolicy: Always
status: {}
