k8chart/templates/webrtc-sfu-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c -o k8chart
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: webrtc-sfu
  name: webrtc-sfu
spec:
  ports:
    - name: "3008"
      port: 3008
      targetPort: 3008
  selector:
    io.kompose.service: webrtc-sfu
status:
  loadBalancer: {}
