k8chart/templates/bbb-net-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: bbb-net1
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/bbb-net1: "true"
  podSelector:
    matchLabels:
      io.kompose.network/bbb-net1: "true"
